tests/org.eclipse.php.core.tests/workspace/errors/php5/unfinishedClassDecl1.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A {
?>
--EXPECT--
[line=3, start=14, end=15] syntax error, unfinished class declaration